--- a/src/serverList/ServerList.scss
+++ b/src/serverList/ServerList.scss
@@ -7,11 +7,12 @@
 }
 
 .server-list--form {
-  display: flex;
-  //padding: .5em 0 0;
-  position: relative;
+  display: inline-flex;
+  border: 1px solid var(--background-menu-color);
+  margin: 0.25em 0.25em 0.25em 0;
   max-width: 30em;
   width: 100%;
+  padding: 0.25em;
 
   >input {
     flex-grow: 1;
